# righack

./: .cproject  .gitignore  .project  README.txt  righack.conf
contributors/: cardboardaardvark@gmail.com
doc/: CONTRIBUTING.txt  code_guidelines.txt  contributing.txt  lifecycle.txt
kernel/: linux+pty_tiocmset.patch
src/: CMakeLists.txt  config.c  config.h  configfile.c  configfile.h  driver.c  driver.h  driver.test.c  driver.test.h  drivers.h  guts.c  guts.h  interface.h  log.c  log.h  main.c  module.c  module.h  modules.h  plugin.h  runloop.c  runloop.h  types.h  util.c  util.h  vserial-private.h  vserial.c  vserial.h
src/drivers/: ptt.c  ptt.h  test.c  test.h  vserial.c  vserial.h
src/modules/: test.c  test.h
